# log-lazy

./: .gitignore  .gitkeep  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  bunfig.toml  eslint.config.js  index.d.ts  package-lock.json  package.json  test-all.sh  tsconfig.json
.github/workflows/: js.yml  main.yml  pr-checks.yml  release.yml  rust.yml
benchmarks/: README.md  lazy-vs-traditional.bench.js  no-logs-vs-lazy-logs.bench.js
examples/: README.md  comparison.js  custom-processors.js  hero.js  lazy-evaluation.js  real-world.js
experiments/: preprocessors-postprocessors.js  test-workflow-logic.sh
js/: .npmignore  CHANGELOG.md  README.md  bunfig.toml  package-lock.json  package.json
js/benchmarks/: lazy-vs-traditional.bench.js  no-logs-vs-lazy-logs.bench.js
js/examples/: README.md  complete.js  (+3 more)
rust/: Cargo.toml  README.md
rust/examples/: basic_usage.rs
rust/src/: lib.rs
rust/tests/: log_lazy.rs
scripts/: check-crate-version.rs  check-file-line-limits.sh  check-file-size.rs  check-mjs-syntax.sh  check-npm-version.mjs  create-js-github-release.mjs  create-rust-github-release.rs  detect-js-changes.mjs  detect-rust-changes.rs  js-paths.mjs  publish-crate.rs  publish-to-npm.mjs  rust-paths.rs  simulate-fresh-merge.sh
src/: index.js
tests/: bunyan.test.js  ci-debug.test.js  debug.test.js  fix-attempt.test.js  index.test.js  log4js.test.js  pino.test.js  preprocessors-postprocessors.test.js  reorder-import.test.js  simple-ci.test.js  static-import.test.js  template-literals.test.js  test-import-helper.js  test-setup.js  winston.test.js
(+21 files in other folders)
